# docx-mcp

./: .gitignore  FEATURES.md  README.md  pyproject.toml  requirements.txt
examples/: complete_table_workflow.py  formatting_demo.py  simple_table_analysis.py  table_analysis_demo.py  table_search_demo.py
src/docx_mcp/: __init__.py  server.py
src/docx_mcp/core/: document_manager.py
src/docx_mcp/models/: formatting.py  responses.py  table_analysis.py  tables.py
src/docx_mcp/operations/tables/: __init__.py  formatting.py  table_operations.py
src/docx_mcp/utils/: exceptions.py  validation.py
tests/: conftest.py  test_document_operations.py  test_fastmcp_server.py  test_formatting.py  test_table_operations.py
